Fix icon crushed when account name was too long

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10399,6 +10399,10 @@ noscript {
       bdi {
         color: $darker-text-color;
       }
+
+      .account__avatar {
+        flex: 0 0 auto;
+      }
     }
 
     &__content {
